fixed about paragraph alignment for small devices

--- a/app/public/css/responsive.css
+++ b/app/public/css/responsive.css
@@ -49,7 +49,7 @@
     width: 100%;
   }
 
-  p#description {
-    text-align: initial;
+  p#description, #index p {
+    text-align: inherit;
   }
 }
